--- a/src/styles.css
+++ b/src/styles.css
@@ -3,12 +3,37 @@
     margin: 0;
 }
 
+html {
+    height:100%;
+}
+
 body {
     width: 100%;
-    height: 1000px;
+    height: 100%;
     display: flex;
     justify-content: center;
+}
+
+#banner {
+    position:absolute;
+    top: 15%;
+    width: 100%;
+    height: 500px;
+    background-color: forestgreen;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+}
+
+#header-bottom-text {
+    background-color: rgb(30, 119, 30);
+    margin-top: 100px;
+    font-size: 5rem;
+    border:none;
+    border-radius: 10px;
+    cursor:pointer;
+    outline: inherit;
 }
 
 .board-holder {
